Removed need for JVM args